# Secure-UAV-Command-and-Control-System-with-Asymmetric-Keys-and-Digital-Signatures

./: CMakeLists.txt  README.md  SECURITY.md  attacks.cpp  crypto_utils.cpp  crypto_utils.h  drone.cpp  mcc.cpp  test.cpp
